# esp32_provisioner

./: CMakeLists.txt  MESH_MQTT_BRIDGE_GUIDE.md  README.md  sdkconfig.defaults
components/ble_mesh_node/: CMakeLists.txt
components/ble_mesh_node/include/: ble_mesh_node.h
components/ble_mesh_node/src/: ble_mesh_node.c
components/ble_mesh_provisioner/: CMakeLists.txt
components/ble_mesh_provisioner/include/: ble_mesh_provisioner.h
components/ble_mesh_provisioner/src/: ble_mesh_auto_config.c  ble_mesh_auto_config.h  ble_mesh_callbacks.c  ble_mesh_callbacks.h  ble_mesh_provisioner.c  ble_mesh_provisioner.c.backup  ble_mesh_storage.c  ble_mesh_storage.h
components/mesh_mqtt_bridge/: CMakeLists.txt  README.md
components/mesh_mqtt_bridge/include/: mesh_mqtt_bridge.h
components/mesh_mqtt_bridge/src/: mesh_mqtt_bridge.c
components/mqtt_bridge/: CMakeLists.txt
components/mqtt_bridge/include/: mqtt_bridge.h
components/mqtt_bridge/src/: mqtt_bridge.c
components/phone_bridge/: CMakeLists.txt
components/phone_bridge/include/: phone_bridge.h
components/phone_bridge/src/: phone_bridge.c
components/wifi_mqtt/: CMakeLists.txt  README.md
components/wifi_mqtt/include/: wifi_mqtt.h
components/wifi_mqtt/src/: wifi_mqtt.c
main/: CMakeLists.txt  Kconfig.projbuild  README.md  esp32_provisioner.c  main_bridge.c
